fix spacing in small_post hyperrelations

--- a/assets/app/elements/node_list/discourse_node_list.scss
+++ b/assets/app/elements/node_list/discourse_node_list.scss
@@ -2,7 +2,6 @@
 
 .discourse_node_list {
     .node_dispatcher {
-        margin-top: 25px;
         & > div {
             //TODO: reverts the node padding
             margin-left: -8px !important;
