--- a/assets/app/elements/post/small_post.scss
+++ b/assets/app/elements/post/small_post.scss
@@ -22,6 +22,7 @@
 
     .node_dispatcher {
         margin-left: 5px;
+        margin-top: 5px;
         margin-right: -2px; // there is a padding-left: 7px
         .small_post_directive {
             width: 100% !important;
